--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<header class="p-4 bg-sky-500">
+<header class="p-4 bg-sky-600">
   <div>
-    <span class="text-base font-semibold text-white">
+    <span class="text-base font-semibold text-black">
       {{ title | titlecase }}
     </span>
   </div>
